fix(LanguageSelector): correct menu positioning in Arabic UI to prevent overflow on the not-found page

--- a/src/components/Header/HeaderButtons/LanguageSelector/LanguageSelector.module.scss
+++ b/src/components/Header/HeaderButtons/LanguageSelector/LanguageSelector.module.scss
@@ -36,6 +36,11 @@
   }
 }
 
+html[lang=ar] .languageSelect.notFoundPage {
+  right: auto;
+  left: 0;
+}
+
 @include m.very-small {
   html[lang=ar] .languageSelect {
     right: auto;
